[project]
name = "ubgen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click==8.1.3",
    "click-default-group==1.2.2",
    "numpy>=2.2.0",
    "pytest==7.3.1",
    "pytest-timeout==2.1.0",
    "python-dateutil==2.8.2",
    "requests==2.28.1",
]
